--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "url": "https://github.com/chunliu/typescript-react-hot-reload"
   },
   "dependencies": {
+    "@devexpress/dx-react-core": "^1.5.1",
+    "@devexpress/dx-react-grid": "^1.5.1",
+    "@devexpress/dx-react-grid-material-ui": "^1.5.1",
+    "@material-ui/core": "^1.4.2",
+    "@material-ui/icons": "^2.0.0",
     "@types/node": "10.3.4",
     "@types/react": "16.4.1",
     "@types/react-dom": "16.0.6",
@@ -49,6 +54,7 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.0",
     "open-browser-webpack-plugin": "0.0.5",
+    "prettier": "1.14.0",
     "react-test-renderer": "16.4.1",
     "redux-devtools-extension": "2.13.4",
     "source-map-loader": "0.2.3",
